[gd_scene load_steps=10 format=3 uid="uid://c3u8pd5xfvt8t"]

[ext_resource type="Script" path="res://src/enemies/mini_boss.gd" id="1_yjk2t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lfmyv"]
radius = 0.6
height = 2.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0rrxm"]
radius = 0.6
height = 2.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xfvt8"]
albedo_color = Color(0.4, 0.1, 0.6, 1)
metallic = 0.5
roughness = 0.3
emission_enabled = true
emission = Color(0.4, 0.1, 0.6, 1)
emission_energy_multiplier = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_b83jk"]
size = Vector3(1.2, 0.4, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_c83jk"]
size = Vector3(0.7, 2.2, 0.7)

[sub_resource type="SphereShape3D" id="SphereShape3D_d83jk"]
radius = 15.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e83jk"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 1, 0)
spread = 180.0
gravity = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
scale_min = 0.1
scale_max = 0.3
color = Color(0.6, 0.2, 0.8, 1)

[sub_resource type="SphereMesh" id="SphereMesh_f83jk"]
radius = 0.1
height = 0.2

[node name="MiniBoss" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_yjk2t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CapsuleShape3D_lfmyv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
mesh = SubResource("CapsuleMesh_0rrxm")
surface_material_override/0 = SubResource("StandardMaterial3D_xfvt8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 0.7
neighbor_distance = 5.0
max_neighbors = 5

[node name="HitBox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0.8)
shape = SubResource("BoxShape3D_b83jk")

[node name="HurtBox" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("BoxShape3D_c83jk")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_d83jk")

[node name="SpecialAttackParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
emitting = false
amount = 50
lifetime = 2.0
one_shot = false
explosiveness = 0.3
process_material = SubResource("ParticleProcessMaterial_e83jk")
draw_pass_1 = SubResource("SphereMesh_f83jk")

[node name="HealthBar3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"] 